tests/baselines/reference/jsdocAugments_nameMismatch.errors.txt
/b.js(4,15): error TS8023: JSDoc '@augments A' does not match the 'extends B' clause.


==== /b.js (1 errors) ====
    class A {}
    class B {}
    
    /** @augments A */
                  ~
!!! error TS8023: JSDoc '@augments A' does not match the 'extends B' clause.
    class C extends B {}
    